--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@
 }
 
 .btn.btn-primary {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: #1f2b5b;
 }
 
 .btn.btn-primary:hover {
@@ -284,7 +284,7 @@
     }
 
     .navbar-light .navbar-brand img {
-        max-height: 100px;
+        max-height: 70px;
     }
 }
 
@@ -624,7 +624,7 @@
 }
 
 .appointment .appointment-form .btn.btn-primary {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: #1f2b5b;
 }
 
 .appointment .appointment-form .btn.btn-primary:hover {
